# memshield

./: .gitignore  LICENSE  PRD.md  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: agentpoison_loader.py  dataset.py  e2e_test.py  loaders.py  run_benchmark.py
memshield-bench/: README.md  generate_dataset.py
memshield-bench/data/: full.jsonl  test.jsonl  train.jsonl  validation.jsonl
memshield-bench/metadata/: metadata.json  taxonomy.json
src/memshield/: __init__.py  _types.py  cli.py  mcp_server.py  provenance.py  proxy.py  shield.py  strategies.py  validation.py
src/memshield/_internal/: drift.py  hash.py
src/memshield/adapters/: __init__.py  anthropic_provider.py  llamaindex_retriever.py  openai_provider.py  pgvector_store.py  pinecone_store.py  qdrant_store.py
src/memshield/audit/: __init__.py  config.py  crypto.py  log.py  schema.py  signing.py  tsa.py
tests/: test_drift.py  test_hash.py  test_integration.py  test_provenance.py  test_proxy.py  test_shield.py  test_strategies.py  test_types.py  test_validation.py
tests/adapters/: test_anthropic_provider.py  test_llamaindex_retriever.py  test_openai_provider.py  test_pgvector_store.py  test_pinecone_store.py  test_qdrant_store.py
tests/audit/: test_audit.py
